force-app/main/default/objects/Thread__c/Thread__c.object-meta.xml
<CustomObject>
    <label>Thread</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Thread Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>