force-app/main/default/objects/Thread__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>User Feedback on Thread</inlineHelpText>
    <label>Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>