force-app/main/default/objects/Thread__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gpt-4</fullName>
            </value>
            <value>
                <fullName>gpt-4-turbo-preview</fullName>
            </value>
            <value>
                <fullName>gpt-3.5-turbo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>