force-app/main/default/objects/Thread__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Chat GPT External Id for a &quot;Run&quot;</inlineHelpText>
    <label>Run Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>